--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "all-dependencies": "^1.1.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
@@ -19,7 +22,8 @@
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
     "remixicon": "^4.2.0",
-    "swiper": "^11.1.3"
+    "swiper": "^11.1.3",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
